--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regra de Três</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
+    <div class="calculator">
+        <h1>Regra de Três</h1>
+        <div class="input-container">
+            <div class="input-group">
+                <input type="number" id="num1" placeholder="A">
+                <span>está para</span>
+                <input type="number" id="num2" placeholder="B">
+            </div>
+
+            <p class="input-text">
+                Assim como
+            </p>
+
+            <div class="input-group">
+                <input type="number" id="num3" placeholder="C">
+                <span>está para</span>
+                <p class="result"><i class="fa-solid fa-xmark"></i></p>
+            </div>
+        </div>
+
+        <button id="calculate">Calcular</button>
+    </div>
     <script src="./src/js/index.js"></script>
 </body>
 </html>
