--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="input-group">
                 <input type="number" id="num3" placeholder="C">
                 <span>está para</span>
-                <p class="result"><i class="fa-solid fa-xmark"></i></p>
+                <p id="result">
+                    <i class="fa-solid fa-xmark"></i>
+                </p>
             </div>
         </div>
 
